Consumer.application/target/classes/META-INF/fabric8/openshift/consumer-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 5c4f29822ec9964f5f4902420f2b5f053668c63a
    fabric8.io/git-branch: main
    fabric8.io/git-url: https://github.com/chungsju/bwce_provider_consumer_CICD.git
  labels:
    app: Consumer.application
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.tibco.bw
  name: consumer
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: Consumer.application
    provider: fabric8
    group: com.tibco.bw
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 5c4f29822ec9964f5f4902420f2b5f053668c63a
        fabric8.io/git-branch: main
        fabric8.io/git-url: https://github.com/chungsju/bwce_provider_consumer_CICD.git
      labels:
        container: consumer
        project: consumer
        app: Consumer.application
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.tibco.bw
      name: consumer
      namespace: default
    spec:
      containers:
      - env:
        - name: BW_APP_MONITORING_CONFIG
          value: '{"url":"http://bwce-mon-svc:8080"}'
        - name: PROVIDER_PORT
          value: "8000"
        - name: APP_CONFIG_PROFILE
          value: docker
        - name: CONSUMER_PORT
          value: "7000"
        - name: PROVIDER_HOST
          value: provider-svc
        - name: BW_PROFILE
          value: Docker
        image: chungsju/consumer
        imagePullPolicy: Always
        name: consumer
        ports:
        - containerPort: 7000
          name: afs3-fileserver
  triggers:
  - type: ConfigChange
