Consumer.application/target/classes/META-INF/fabric8/openshift/consume-svc-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    fabric8.io/git-commit: 5c4f29822ec9964f5f4902420f2b5f053668c63a
    fabric8.io/git-branch: main
    fabric8.io/git-url: https://github.com/chungsju/bwce_provider_consumer_CICD.git
  labels:
    container: consumer
    provider: fabric8
    project: consumer
    group: com.tibco.bw
    app: Consumer.application
    version: 1.0.0-SNAPSHOT
  name: consume-svc
  namespace: default
spec:
  port:
    targetPort: 7000
  to:
    kind: Service
    name: consume-svc
